--- a/web/app/templates/history.html
+++ b/web/app/templates/history.html
@@ -17,6 +17,7 @@
             <p>{{name}}로 <span id="action-text">{{action}}</span> {{day}} 일 째</p>
             <button>메인화면</button>
         </div>
+        <!--
         <div class="history-box">
             <div id="button-box">
                 <button id="my-question" class="tab-button selected" onclick="myQuestion()">나의 질문 보기</button>
@@ -38,6 +39,25 @@
                     </ol>
                 </div>
             </div>
+        </div>
+        -->
+        <div class="myQuestionContainer">
+            <ul>
+                <p>나의 질문 보기</p>
+                <li>질문 답변 개수 : </li>
+                <li>질문1</li>
+                <li>질문2</li>
+                <li>질문3</li>
+                <li>질문4</li>
+                <li>질문1</li>
+                <li>질문2</li>
+                <li>질문3</li>
+                <li>질문4</li>
+                <li>질문1</li>
+                <li>질문2</li>
+                <li>질문3</li>
+                <li>질문4</li>
+            </ul>
         </div>
     </main>
     <footer>
