--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -28,7 +28,7 @@
                     <p>혹시 <span>회원</span>이 아닙니까?</p>
                     <button id="register-button" class="button-unified">회원가입</button>
                 </div>
-                <br><p>로그인 없이 사용하기</p>
+                 <br><label class="left-align-label" >로그인 없이 사용하기</label>
                 <button id='create-session-button' class="button-unified">세션 생성하기</button>
                 <form id="session" action="/session-without-login" method="POST">
                     <button id="into-session-button" class="button-unified">코드로 세션 입장</button>
