--- a/web/app/static/css/index-style.css
+++ b/web/app/static/css/index-style.css
@@ -31,10 +31,32 @@ main {
 
 .interaction {
     display: flex;
-    flex: 1.5;
+    flex: 2.5;
     flex-direction: column;
     margin: 20px;
     align-items: center;
+    justify-content: center;
+    transform: none;
+}
+
+.left-align-label {
+    text-align: left;
+    width: 100%;
+    max-width: 400px;
+    padding-left: 5px;
+}
+
+
+form, #register, #session {
+    width: 100%;
+    max-width: 400px;
+}
+
+#create-session-button,
+#into-session-button,
+#session-code {
+    width: 100%;
+    max-width: 400px;
 }
 
 .interaction img {
@@ -46,6 +68,8 @@ main {
 #login {
     display: flex;
     flex-direction: column;
+    width: 100%;
+    max-width: 400px;
 }
 
 #password {
@@ -54,18 +78,6 @@ main {
 
 #login input, button{
     padding-left: 20px;
-}
-
-.button-unified {
-    width: 100%;
-    padding: 10px;
-    border-radius: 10px;
-    border: none;
-    box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.2);
-    transition: all 0.2s ease;
-    font-size: 1rem;
-    margin: 5px auto;
-    display: block;
 }
 
 #login-button {
@@ -89,6 +101,9 @@ main {
 #register {
     display: flex;
     flex-direction: column;
+    margin-top: 5px;
+    width: 100%;
+    max-width: 400px;
 }
 
 #register span {
@@ -107,6 +122,7 @@ main {
     box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.2);
     transition: all 0.2s ease;
 }
+
 
 #create-session-button {
     background-color: var(--main-button-normal);
@@ -136,6 +152,7 @@ main {
     color: white;
     height: auto;
     width: 100%;
+    max-width: 400px;
     border-radius: 10px;
     border: none;
     padding: 8px;
@@ -174,12 +191,15 @@ footer {
         padding: 10px;
         gap: 20px;
     }
-
+    
     .interaction {
         transform: none; 
         flex: unset;
         width: 100%;
         margin: 0 auto;
+        padding: 0 10px;
+        align-items: center;
+        justify-content: center;
     }
 
     .interaction img {
@@ -188,16 +208,6 @@ footer {
 
     .main-image {
         display: none;
-    }
-
-    .interaction {
-        transform: none;
-        padding: 0 10px;
-        align-items: stretch;
-    }
-
-    .interaction img {
-        margin: 0 auto;
     }
 
     form, #register, #session {
