--- a/web/app/templates/home.html
+++ b/web/app/templates/home.html
@@ -16,10 +16,16 @@
 <body>
     <header>
         <img src="../static/image/logo.png">
-        <button id="logout-button">로그아웃</button>
+        <button id="nav-toggle">☰</button>
+        <div class="nav-buttons" id="nav-menu">
+            <button onclick="location.href='index.html'">메인 화면</button>
+            <button onclick="location.href='history.html'">기록 화면</button>
+            <button id="logout-button">로그아웃</button>
+        </div>
     </header>
     <main>
         <div class="session-list">
+            <button id="toggle-panel-button">☰</button>
             <ul class="session-group">
                 <li class="session-group-item">
                     <p id="session-title">세션 제목</p>
@@ -34,8 +40,8 @@
                 </li>
             </ul>
             <div class="page-num">
-                <button id = "frontB">◀</button>
-                <button id = "backB">▶</button>
+                <button id="frontB">◀</button>
+                <button id="backB">▶</button>
             </div>
         </div>
         <div class="side-panel">
@@ -44,7 +50,7 @@
                 <p>{{name}}, 안녕하세요!</p>
             </div>
             <div class="history">
-                <canvas></canvas>
+                <canvas id="visit-calendar"></canvas>
                 <ul>
                     <li>질문한 횟수 : {{list.question}}</li>
                     <li>대답한 횟수 : {{list.answer}}</li>
@@ -59,6 +65,15 @@
                 <input id="session-code" class="form-control rounded" type="text" required placeholder="세션 코드 입력">
             </form>
         </div>
+        <div id="sessionModal" class="modal">
+            <div class="modal-content">
+                <span class="close-button" id="closeModal">&times;</span>
+                <h2>새 세션 만들기</h2>
+                <input type="text" id="sessionTitleInput" class="form-control rounded" placeholder="세션 제목을 입력하세요">
+                <button id="submitSessionBtn" class="create-session rounded">생성하기</button>
+            </div>
+        </div>
+
     </main>
     <footer>
         <div id="menu">
@@ -66,7 +81,8 @@
         </div>
         <div id="mention">
             <p>powerd by Mistral AI</p>
-            <a href="https://mistral.ai/"><img src="https://upload.wikimedia.org/wikipedia/de/1/1c/Mistral_AI_logo.svg" width="60"></a>
+            <a href="https://mistral.ai/"><img src="https://upload.wikimedia.org/wikipedia/de/1/1c/Mistral_AI_logo.svg"
+                    width="60"></a>
         </div>
         <div id="info">
             <p>경기대학교 team JAMES</p>
