--- a/web/app/templates/session.html
+++ b/web/app/templates/session.html
@@ -10,10 +10,6 @@
 </head>
 
 <body>
-    <script>
-        let socket = new WebSocket("ws://localhost:5501");
-    </script>
-
     <header>
     </header>
     <main>
@@ -52,10 +48,12 @@
                 <div class="box">요약된 질문</div>
             </div>
             <div class="LLM-list-panel">
+                '<!--
                 <div class="box">전달받은 llm 리스트 AI</div>
                 <div class="box">전달받은 llm 리스트 운영체제</div>
                 <div class="box">전달받은 llm 리스트 네트워크</div>
                 <div class="box">전달받은 llm 리스트 프론트엔드</div>
+                -->
             </div>
         </div>
         <div id="questionModal" class="modal-overlay" style="display: none;">
@@ -65,6 +63,8 @@
                 <ul id="modal-question-list"></ul>
             </div>
         </div>
+    </main>
+</div>
     </main>
     <footer>
     </footer>
