세션 코드 입력 12글자 영단어 자동 대문자,  세션 llm 보내기 2초 주기

--- a/web/app/templates/home.html
+++ b/web/app/templates/home.html
@@ -97,7 +97,7 @@
                 <button id="create-session-button">세션 만들기</button>
                 <label>새로운 세션에 참여하세요</label>
                 <button id="into-session-button">코드로 세션 입장</button>
-                <input id="session-code" class="form-control rounded" type="text" required placeholder="세션 코드 입력">
+                <input id="session-code" class="form-control rounded" type="text" maxlength="14" required placeholder="세션 코드 입력">
             </form>
         </div>
         <div id="sessionModal" class="modal">
