--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -32,7 +32,7 @@
                 <button id='create-session-button' class="button-unified">세션 생성하기</button>
                 <form id="session" action="/session-without-login" method="POST">
                     <button id="into-session-button" class="button-unified">코드로 세션 입장</button>
-                    <input id="session-code" class="form-control rounded" type="text" required placeholder="세션 코드 입력">
+                    <input id="session-code" class="form-control rounded" type="text" maxlength="14"  placeholder="세션 코드 입력">
                 </form>
             </div>
         </main>
