--- a/web/app/static/css/session-style.css
+++ b/web/app/static/css/session-style.css
@@ -39,28 +39,44 @@ main {
     margin: 0;
     border-radius: 10px;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
-        justify-content: space-between; /* 하단으로 chat-form 밀기 */
+    justify-content: space-between; /* 하단으로 chat-form 밀기 */
     align-items: center;            /* 중앙 정렬 */
 }
 
 .categories {
     flex: 1;
-    overflow-y: auto;
     display: flex;
     flex-wrap: nowrap;
     gap: 0.5rem;
     padding: 0.5rem;
+    overflow: visible;
 }
 
+/*
 .category-box {
     background-color: #005577;
     color: white;
     padding: 1rem;
     text-align: center;
     width: 100%;
-    max-width: 100px;
     height: 100%;
-    max-height: 100px;
+}*/
+
+.category-box {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  margin: 8px;
+  border-radius: 10px;
+  background-color: #e0f7fa;
+  font-weight: bold;
+  transition: width 0.3s ease, height 0.3s ease;
+  overflow: hidden;
+}
+
+
+.category-box {
+    animation: bounce-in-bottom 1.1s both; 
 }
 
 .right-panel {
@@ -224,10 +240,6 @@ footer {
 .bounce-in-bottom {
 	-webkit-animation: bounce-in-bottom 1.1s both;
 	        animation: bounce-in-bottom 1.1s both;
-}
- 
-.category-box {
-    animation: bounce-in-bottom 1.1s both; 
 }
 
 @keyframes bounce-in-bottom {
