세션 입장 및 세션 정보 db 생성,  각 페이지 url로 접근시 쿠키 확인, 세션 유효성 처리

--- a/web/app/templates/home.html
+++ b/web/app/templates/home.html
@@ -108,8 +108,8 @@
                 <input type="text" id="sessionexplain" class="form-control rounded" placeholder="세션 설명을 입력하세요">
                 <br>
                 <div class="radio-group">
-                <label><input type="radio" name="chk_info" value="임시">임시</label>
-                <label><input type="radio" name="chk_info" value="영구">영구</label>
+                <label><input type="radio" name="chk_info" value="temporary" checked>임시</label>
+                <label><input type="radio" name="chk_info" value="permanent">영구</label>
                 </div>
                 <button id="submitSessionBtn" class="create-session rounded">생성하기</button>
             </div>
