--- a/web/app/templates/session.html
+++ b/web/app/templates/session.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="ko">
 
+{% if error == 'True' %}
+
+{% else %}
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -70,3 +73,4 @@
 </body>
 
 </html>
+{% endif %}
