--- a/web/app/templates/session.html
+++ b/web/app/templates/session.html
@@ -21,7 +21,7 @@
             <div class="categories">
             </div>
             <!--입력창 영역 -->
-            <form id="chatForm" class="chat-form">
+            <form id="chatForm" class="chat-form" onsubmit="return false">
                 <div class="questionBar">
                     <input type="text" id="originaltext" class="form-control rounded-pill" placeholder="질문을 입력하세요">
                     <button class=questionButton id="questionButton" type="button">submit</button>
